// GENERATED by scripts/md-to-test.ts — do not edit.
// Source: README.md
// Regenerate: bun scripts/md-to-test.ts README.md > test/readme.generated.test.ts

import { describe, expect, test } from "bun:test"

import {
  parse,
  parseStmt,
  parseOrThrow,
  parseStmtOrThrow,
  Sqlite3ParserDiagnosticError,
  Sqlite3ParserError,
  traverse,
  VisitorKeys,
} from "../generated/current.ts"
import type { Span, Token } from "../generated/current.ts"

interface Capture {
  stdout: string[]
  stderr: string[]
}

function captureConsole(): { captured: Capture; restore: () => void } {
  const captured: Capture = { stdout: [], stderr: [] }
  const origLog = console.log
  const origErr = console.error
  const render = (args: unknown[]): string =>
    args.map((a) => (typeof a === "string" ? a : Bun.inspect(a))).join(" ")
  console.log = (...args: unknown[]) => {
    captured.stdout.push(render(args))
  }
  console.error = (...args: unknown[]) => {
    captured.stderr.push(render(args))
  }
  return {
    captured,
    restore() {
      console.log = origLog
      console.error = origErr
    },
  }
}

interface ThrownSummary {
  name: string
  message: string
}

function summarizeThrown(value: unknown): ThrownSummary {
  if (value instanceof Error) {
    return { name: value.constructor.name, message: value.message }
  }
  return { name: "unknown", message: String(value) }
}

/** True if the error came from a failed `expect(...)` call — we
 *  want those to fail the enclosing test loudly, not be folded into
 *  the block's captured-throw snapshot. */
function isAssertionError(value: unknown): boolean {
  if (!(value instanceof Error)) return false
  return value.message.startsWith("expect(received)")
}

describe("README.md code blocks", () => {
  test("README.md:15 (ts)", () => {
    const { captured: __captured, restore: __restore } = captureConsole()
    let __threw: unknown
    try {
      const result = parse(`
        INSERT INTO users VALUES (1, 'Douglas');
        SELECT id, name FROM users WHERE active = 1
      `)

      // result is a union of ParseOk and ParseErr
      // type ParseOk = { status: "ok"; root: CmdList; ... }
      // type ParseErr = { status: "error"; errors: readonly ParseDiagnostic[]; ... }
      if (result.status === "ok") {
        // Root is a CmdListNode containing all top-level statements
        const { cmds } = result.root
        console.log(cmds.length)
        expect(__captured.stdout.at(-1)).toBe("2")
        console.log(cmds[0].type)
        expect(__captured.stdout.at(-1)).toBe("InsertStmt")
        console.log(cmds[1].type)
        expect(__captured.stdout.at(-1)).toBe("SelectStmt")
      } else {
        throw "expected ok"
      }
    } catch (e) {
      if (isAssertionError(e)) throw e
      __threw = e
    } finally {
      __restore()
    }
    expect({
      stdout: __captured.stdout,
      stderr: __captured.stderr,
      threw: __threw === undefined ? undefined : summarizeThrown(__threw),
    }).toMatchSnapshot()
  })

  test("README.md:39 (ts)", () => {
    const { captured: __captured, restore: __restore } = captureConsole()
    let __threw: unknown
    try {
      const result = parseStmt("SELECT id, name FROM users WHERE active = 1")
      if (result.status === "ok") {
        // Root is a StmtNode containing the first top-level statement
        console.log(result.root.type)
        expect(__captured.stdout.at(-1)).toBe("SelectStmt")
      }

      // By default, parseStmt rejects trailing content (second statements, garbage tokens)
      const result2 = parseStmt("SELECT id, name FROM users WHERE active = 1; SELECT 1")
      if (result2.status === "error") {
        console.error(result2.errors.join("\n"))
      }

      // Use `allowTrailing: true` to incrementally parse a multi-statement script
      function* parseEach(sql: string) {
        while (sql) {
          const result = parseStmt(sql, { allowTrailing: true })
          yield result
          if (result.status === "error") {
            return
          }
          sql = sql.slice(result.tail)
        }
      }
    } catch (e) {
      if (isAssertionError(e)) throw e
      __threw = e
    } finally {
      __restore()
    }
    expect({
      stdout: __captured.stdout,
      stderr: __captured.stderr,
      threw: __threw === undefined ? undefined : summarizeThrown(__threw),
    }).toMatchSnapshot()
  })

  test("README.md:69 (ts)", () => {
    const { captured: __captured, restore: __restore } = captureConsole()
    let __threw: unknown
    try {
      const { root: cmds } = parseOrThrow("SELECT id, name FROM users WHERE active = 1; SELECT 1")
      console.log(cmds.type)
      expect(__captured.stdout.at(-1)).toBe("CmdList")
      const { root: stmt } = parseStmtOrThrow("SELECT id, name FROM users WHERE active = 1")
      console.log(stmt.type)
      expect(__captured.stdout.at(-1)).toBe("SelectStmt")
    } catch (e) {
      if (isAssertionError(e)) throw e
      __threw = e
    } finally {
      __restore()
    }
    expect({
      stdout: __captured.stdout,
      stderr: __captured.stderr,
      threw: __threw === undefined ? undefined : summarizeThrown(__threw),
    }).toMatchSnapshot()
  })

  test("README.md:78 (ts)", () => {
    const { captured: __captured, restore: __restore } = captureConsole()
    let __threw: unknown
    try {
      const r = parseStmt("SELECT 1; SELECT 2", { allowTrailing: true })
      if (r.status === "ok") {
        console.log(r.root.type) // SelectStmt
        console.log(r.tail) // 10 — source.slice(tail) is what's left to parse
      } else {
        throw "expected ok"
      }
    } catch (e) {
      if (isAssertionError(e)) throw e
      __threw = e
    } finally {
      __restore()
    }
    expect({
      stdout: __captured.stdout,
      stderr: __captured.stderr,
      threw: __threw === undefined ? undefined : summarizeThrown(__threw),
    }).toMatchSnapshot()
  })

  test("README.md:94 (ts)", () => {
    const { captured: __captured, restore: __restore } = captureConsole()
    let __threw: unknown
    try {
      type ParseDiagnostic = {
        /** Error message */
        readonly message: string
        /** Location of the error */
        readonly span: Span
        /** Optional: the token that caused the error */
        readonly token?: Token
        /** Optional: additional hints about the error (eg, solutions)  */
        readonly hints?: readonly DiagnosticHint[]
        /** Optional: the filename used in error messages, if provided at parse time */
        readonly filename?: string
        /** Format the diagnostic as a string with source code citations rendered as code blocks */
        format(): string
        /** Alias of {@link format} */
        toString(): string
      }

      interface DiagnosticHint {
        /** Hint message */
        readonly message: string
        /** Optional: the source location the hint is referring to */
        readonly span?: Span
      }
    } catch (e) {
      if (isAssertionError(e)) throw e
      __threw = e
    } finally {
      __restore()
    }
    expect({
      stdout: __captured.stdout,
      stderr: __captured.stderr,
      threw: __threw === undefined ? undefined : summarizeThrown(__threw),
    }).toMatchSnapshot()
  })

  test("README.md:122 (ts)", () => {
    const { captured: __captured, restore: __restore } = captureConsole()
    let __threw: unknown
    try {
      const result = parse("SELECT FROM users")
      if (result.status === "error") {
        for (const err of result.errors) {
          // access fields:
          //   err.message    → "near \"FROM\": syntax error"
          //   err.span       → { offset, length, line, col }
          //   err.token      → the offending Token, when available
          //   err.hints      → readonly { message, span? }[]
        }

        // Same as result.errors.map(e => e.format()).join("\n")
        console.error(result.errors.join("\n"))
        expect(__captured.stderr.at(-1)).toBe(
          'near "FROM": syntax error\n\nAt 1:7:\n   1│ SELECT FROM users\n    │        ^^^^\n\n  hint: expected a result expression before FROM',
        )
      } else {
        throw "expected error"
      }
    } catch (e) {
      if (isAssertionError(e)) throw e
      __threw = e
    } finally {
      __restore()
    }
    expect({
      stdout: __captured.stdout,
      stderr: __captured.stderr,
      threw: __threw === undefined ? undefined : summarizeThrown(__threw),
    }).toMatchSnapshot()
  })

  test("README.md:149 (ts)", () => {
    const { captured: __captured, restore: __restore } = captureConsole()
    let __threw: unknown
    try {
      try {
        parseOrThrow("SELECT FROM users")
      } catch (e) {
        if (e instanceof Sqlite3ParserDiagnosticError) {
          console.error(e.errors.length)
          expect(__captured.stderr.at(-1)).toBe("1")
          console.error(e.errors[0].message)
          expect(__captured.stderr.at(-1)).toBe('near "FROM": syntax error')
          console.error(e.message)
          expect(__captured.stderr.at(-1)).toBe(
            'near "FROM": syntax error\n\nAt 1:7:\n   1│ SELECT FROM users\n    │        ^^^^\n\n  hint: expected a result expression before FROM',
          )
        } else {
          throw e
        }
      }
    } catch (e) {
      if (isAssertionError(e)) throw e
      __threw = e
    } finally {
      __restore()
    }
    expect({
      stdout: __captured.stdout,
      stderr: __captured.stderr,
      threw: __threw === undefined ? undefined : summarizeThrown(__threw),
    }).toMatchSnapshot()
  })

  test("README.md:175 (ts)", () => {
    const { captured: __captured, restore: __restore } = captureConsole()
    let __threw: unknown
    try {
      const { root } = parseOrThrow("SELECT a, b FROM t")
      const tables: string[] = []

      traverse(root, {
        // All args optional.
        enter(node, parent) {
          // Runs before `nodes` handler on every node.
        },
        nodes: {
          // Runs before visiting children.
          TableSelectTable(node, _parent) {
            // TableSelectTable.tblName → QualifiedName.objName → Name.text
            tables.push(node.tblName.objName.text)
            // From any handler:
            //   return "skip" to stop descending into the current node
            //   return "break" to halt the whole walk
            //   return "continue" / nothing to proceed
            return "skip"
          },
        },
        leave(node, parent) {
          // Runs after visiting children.
        },
        keys: {
          // Override traversal order & keys for a specific node type.
          Select: ["with", "select", "compounds"],
        },
      })

      console.log(tables)
      expect(__captured.stdout.at(-1)).toBe('[ "t" ]')
    } catch (e) {
      if (isAssertionError(e)) throw e
      __threw = e
    } finally {
      __restore()
    }
    expect({
      stdout: __captured.stdout,
      stderr: __captured.stderr,
      threw: __threw === undefined ? undefined : summarizeThrown(__threw),
    }).toMatchSnapshot()
  })
})
