// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`README.md code blocks README.md:15 (ts) 1`] = `
{
  "stderr": [],
  "stdout": [
    "2",
    "InsertStmt",
    "SelectStmt",
  ],
  "threw": undefined,
}
`;

exports[`README.md code blocks README.md:37 (ts) 1`] = `
{
  "stderr": [
    
"expected end of input after single statement

At 1:45:
   1│ SELECT id, name FROM users WHERE active = 1; SELECT 1
    │                                              ^^^^^^^^"
,
  ],
  "stdout": [
    "SelectStmt",
  ],
  "threw": undefined,
}
`;

exports[`README.md code blocks README.md:67 (ts) 1`] = `
{
  "stderr": [],
  "stdout": [
    "CmdList",
    "SelectStmt",
  ],
  "threw": undefined,
}
`;

exports[`README.md code blocks README.md:76 (ts) 1`] = `
{
  "stderr": [],
  "stdout": [
    "SelectStmt",
    "10",
  ],
  "threw": undefined,
}
`;

exports[`README.md code blocks README.md:90 (ts) 1`] = `
{
  "stderr": [],
  "stdout": [],
  "threw": undefined,
}
`;

exports[`README.md code blocks README.md:118 (ts) 1`] = `
{
  "stderr": [
    
"near "FROM": syntax error

At 1:7:
   1│ SELECT FROM users
    │        ^^^^

  hint: expected a result expression before FROM"
,
  ],
  "stdout": [],
  "threw": undefined,
}
`;

exports[`README.md code blocks README.md:143 (ts) 1`] = `
{
  "stderr": [
    "1",
    "near "FROM": syntax error",
    
"near "FROM": syntax error

At 1:7:
   1│ SELECT FROM users
    │        ^^^^

  hint: expected a result expression before FROM"
,
  ],
  "stdout": [],
  "threw": undefined,
}
`;

exports[`README.md code blocks README.md:167 (ts) 1`] = `
{
  "stderr": [],
  "stdout": [
    "[ "t" ]",
  ],
  "threw": undefined,
}
`;

exports[`README.md code blocks README.md:39 (ts) 1`] = `
{
  "stderr": [
    
"expected end of input after single statement

At 1:45:
   1│ SELECT id, name FROM users WHERE active = 1; SELECT 1
    │                                              ^^^^^^^^"
,
  ],
  "stdout": [
    "SelectStmt",
  ],
  "threw": undefined,
}
`;

exports[`README.md code blocks README.md:69 (ts) 1`] = `
{
  "stderr": [],
  "stdout": [
    "CmdList",
    "SelectStmt",
  ],
  "threw": undefined,
}
`;

exports[`README.md code blocks README.md:78 (ts) 1`] = `
{
  "stderr": [],
  "stdout": [
    "SelectStmt",
    "10",
  ],
  "threw": undefined,
}
`;

exports[`README.md code blocks README.md:94 (ts) 1`] = `
{
  "stderr": [],
  "stdout": [],
  "threw": undefined,
}
`;

exports[`README.md code blocks README.md:122 (ts) 1`] = `
{
  "stderr": [
    
"near "FROM": syntax error

At 1:7:
   1│ SELECT FROM users
    │        ^^^^

  hint: expected a result expression before FROM"
,
  ],
  "stdout": [],
  "threw": undefined,
}
`;

exports[`README.md code blocks README.md:149 (ts) 1`] = `
{
  "stderr": [
    "1",
    "near "FROM": syntax error",
    
"near "FROM": syntax error

At 1:7:
   1│ SELECT FROM users
    │        ^^^^

  hint: expected a result expression before FROM"
,
  ],
  "stdout": [],
  "threw": undefined,
}
`;

exports[`README.md code blocks README.md:175 (ts) 1`] = `
{
  "stderr": [],
  "stdout": [
    "[ "t" ]",
  ],
  "threw": undefined,
}
`;
